# meet_demo_app

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  readme.md
android/app/: build.gradle
app/: pubspec.yaml
app/lib/routing/: circular_reveal_clipper.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc
app/windows/runner/: Runner.rc
drag_and_drop/: README.md  pubspec.yaml
drag_and_drop/example/: README.md  pubspec.yaml
drag_and_drop/example/lib/: main.dart
drag_and_drop/example/test/: widget_test.dart
drag_and_drop/example/windows/: CMakeLists.txt
drag_and_drop/lib/: drag_and_drop.dart
drag_and_drop/test/: drag_and_drop_test.dart
drag_and_drop/windows/: CMakeLists.txt  drag_and_drop_plugin.cpp
ffi/: CMakeLists.txt  crypto.cpp  crypto.def  crypto.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: crypto.dart  main.dart
lib/routing/: circular_reveal_clipper.dart  reval_route.dart
lib/screens/home/: home_screen.dart
lib/widgets/: button.dart  drop_zone.dart
progress/: README.md  pubspec.yaml
progress/example/: README.md  pubspec.yaml
progress/example/lib/: main.dart
progress/example/test/: widget_test.dart
progress/example/windows/: CMakeLists.txt
progress/lib/: progress.dart
progress/test/: progress_test.dart
progress/windows/: CMakeLists.txt  progress_plugin.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: main.cpp
(+27 files in other folders)
